@@ -1,7 +1,7 @@
 === Documentation ===
 Contributors: itthinx
 Donate link: https://www.itthinx.com/plugins/documentation
-Tags: documentation, document, documents, woocommerce, wiki, manual, manuals
+Tags: documentation, document, documents, wiki, woocommerce, manual, manuals, document management, documentation management
 Requires at least: 5.0
 Tested up to: 5.4
 Requires PHP: 5.6.0
